@@ -75,6 +75,11 @@ Architectural changes
 - Fluid-structure interaction: update script generation for coupling
   with current versions of Salome-Meca.
 
+User changes
+------------
+
+- Allow short path 'salome' for hdf5, cgns, med in installation script.
+
 Release 5.0.8 (Mar 30 2018)
 ===========================
 
